[package]
name = "vale_bridge"
version = "0.1.0"
edition = "2021"

[features]
default = []
plugins = []
events = []
beacon = ["reqwest"]
tower = ["reqwest"]

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
rhai = { version = "1.3.0", features = ["sync"] }
reqwest = { version = "0.11.7", features = ["json"], optional = true }

