[package]
name = "vale_bridge"
version = "0.1.0"
edition = "2021"

[features]
default = ["util"]
util = ["chrono", "serde", "serde_repr", "jsonwebtoken"]
plugins = ["rhai"]
events = []
beacon = ["reqwest", "serde"]
tower = ["reqwest", "serde"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"], optional = true }
serde_repr = { version = "0.1.7", optional = true }
jsonwebtoken = { version = "7.2.0", optional = true }
rhai = { version = "1.3.0", features = ["sync"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
reqwest = { version = "0.11.7", features = ["json"], optional = true }

