[package]
name = "vale_bridge"
version = "0.1.0"
edition = "2021"

[features]
default = ["util"]
util = ["chrono", "serde", "serde_repr", "jsonwebtoken", "bitflags"]
plugins = ["rhai", "reqwest"]
events = ["tokio"]
beacon = ["reqwest", "serde"]
tower = ["reqwest", "serde"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"], optional = true }
rocket = { version = "0.5.0-rc.1", default-features = false, optional = true }
serde_repr = { version = "0.1.7", optional = true }
jsonwebtoken = { version = "7.2.0", optional = true }
rhai = { version = "1.3.0", features = ["sync"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
reqwest = { version = "0.11.7", features = ["json"], optional = true }
diesel = { version = "1.4.8", features = ["postgres"], optional = true }
tokio = { version = "1.15.0", default-features = false, features = ["sync"], optional = true }
bitflags = { version = "1.3.2", optional = true }
lazy_static = "1.4.0"
async-trait = "0.1.52"
parking_lot = "0.11.2"

